# saig-ai-api

./: .gitignore  pyproject.toml
notebooks/: 01_eda_dataset5_duckdb.ipynb
src/api/: main.py
src/training/: build.py  config.py  data.py  datasets.py  features.py  itic.py  normalize.py  priors.py  spatial.py
